--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>E-commerce</title>
 </head>
 <body>
-   HIBA AKDIM    KHADIJA ATTAK mery
+   
 </body>
 </html>
