--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>E-commerce</title>
 </head>
 <body>
-        test test test
-        sudhvdhcoijsdez
+        salaaaam cavaa
 </body>
 </html>
