--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce</title>
+    <title>Oulinou Parfums</title>
 </head>
 <body>
-        khadija attak
+        <button>Menu</button>
+        <!-- <img src="images/logo.jpeg" alt=""> -->
+        <input type="text" name="search" id="search" placeholder="Search">
+        <button>Search</button>
+        <button>Login</button>
+        <button>Sign Up</button>
+        <button>Cart</button>
 </body>
 </html>
